corpus/baselines/conformance/salsa/inferringClassMembersFromAssignments6.errors.txt
inferringClassMembersFromAssignments6.js(2,16): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
inferringClassMembersFromAssignments6.js(12,13): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.


==== inferringClassMembersFromAssignments6.js (2 errors) ====
    function Foonly() {
        var self = this
                   ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
        self.x = 1
        self.m = function() {
            console.log(self.x)
        }
    }
    Foonly.prototype.mreal = function() {
        var self = this
        self.y = 2
    }
    const foo = new Foonly()
                ~~~~~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    foo.x
    foo.y
    foo.m()
    